--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,18 @@ code {
 
 #root{
   height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  align-items: center;
+  justify-content: center;
+  background-color: #F3F3E9;
+}
+
+.header{
+  padding: 20px 60px;
+  border-bottom: 1px solid #F3F3E9;
+}
+
+.start-form{
+  min-width: 500px;
+  max-width: 600px;
+
 }
